init/argocd_traefik/02-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: ${THIS_CLUSTER_ISSUER}
    kubernetes.io/ingress.class: ${THIS_CLUSTER_INGRESS}
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    secretName: "${THIS_ARGO_HOST}-${THIS_NAME}-tls"
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${THIS_ARGO_HOST}.${THIS_DOMAIN}`)
      priority: 10
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: argotransport
    - kind: Rule
      match: Host(`${THIS_ARGO_HOST}.${THIS_DOMAIN}`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
